# proxmox

./: .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  GitVersion.yml  README.md  TMP-cilium-incident-summary.md  TODO.md  cc-usage.sh  cluster-architecture-plan.md  conftest.py  git-commands.md  llm.md  package-lock.json  package.json  pyproject.toml  renovate.json  serial.md  snippets.md  temp.md  tsconfig.json  vscode-extensions.md
.claude/: settings.local.json
.cursor/skills/flux-gitops/: SKILL.md
.cursor/skills/k8s-deployments/: SKILL.md
.cursor/skills/k8s-helm-releases/: SKILL.md
.cursor/skills/k8s-kyverno-kubescape-compliance/: SKILL.md
.cursor/skills/k8s-observability/: SKILL.md
.cursor/skills/k8s-traefik-ingress/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/actions/docker/: action.yaml  push.yaml
.github/actions/git-tag-diff/: action.yaml
.github/actions/git-tag-remove-prefix/: action.yaml
.github/scripts/: bump_job_metadata_name.py  enrich_dependabot_image_pr.py  verify_dependabot_clusters_dirs.py  verify_job_metadata_name_bump.py
.github/workflows/: build-adsbexchange.yaml  build-ais-catcher.yaml  build-dump1090-fa.yaml  build-esp-poller.yml  build-fr24.yaml  build-node-base.yaml  build-opensky.yaml  build-piaware.yaml  build-proxmox-pbs-backup-client.yaml  build-proxmox-pbs-backup-client.yml  build-sdr-base-images.yaml  build-tar1090.yaml  bump-k8s-job-name-on-label.yml  dependabot-image-pr-enrich.yaml  docker.yaml  format-and-create-pr.yml  ghcr-prune.yaml  label.yml  poutine.yml  pr-build.yml  promotion-pull-request.yml  prune-ghcr.yml  stale.yml  tag-and-release.yml  update-flux.yaml  update-flux.yml  verify-dependabot-clusters.yml  verify-k8s-job-name-bump.yml  zizmor.yml
.github/workflows/adsb/: build-adsbexchange.yaml  build-dump1090-fa.yaml
admin-skel/: .bashrc
admin-skel/.ssh/: authorized_keys
bases/: README.md
bases/kyverno-best-practices/: clusterpolicy-disallow-privilege-escalation.yaml  clusterpolicy-require-resource-limits.yaml  clusterpolicy-require-run-as-non-root.yaml  kustomization.yaml
bases/kyverno-platform/: clusterpolicy-check-deprecated-apis.yaml  clusterpolicy-disallow-host-namespaces.yaml  clusterpolicy-disallow-host-path.yaml  clusterpolicy-disallow-latest-require-digest.yaml  clusterpolicy-flux-trusted-sources.yaml  clusterpolicy-require-recommended-labels.yaml  clusterpolicy-traefik-disallow-default-tlsoption.yaml  kustomization.yaml
bases/kyverno-supply-chain/: clusterpolicy-cosign-vuln-attestation.yaml  clusterpolicy-cyclonedx-sbom.yaml  clusterpolicy-github-slsa-provenance.yaml  kustomization.yaml
bases/netpol-baseline/: allow-dns-egress.yaml  allow-prometheus-scrape.yaml  default-deny.yaml  kustomization.yaml
clusters/: README.md
clusters/edge-sdr/apps/: ingress.yaml  kustomization.yaml  namespace-platform-edge-sdr.yaml
clusters/edge-sdr/flux-system/: gotk-components.yaml  gotk-sync.yaml
clusters/production/: README.md
clusters/production/apps/: hubble-ui-ingress.yaml  ingress.yaml  kustomization.yaml
docs/: app-deployment-standardization.md  pbs-encrypted-backup-web-viewer.md  postgres-naming-convention.md
images/esp-poller/: Dockerfile  README.md  poller.py  requirements.txt
images/proxmox-pbs-backup-client/: Dockerfile
infra/blackbox-vps/: README.md  blackbox.yml  docker-compose.yml
infra/cloud-init/: .gitignore  README.md  create-k0s-alpine-template.sh  create-k0s-debian-template.sh  k0s-cloud-init-test.sh
infra/k0s/: README.md  cilium-k0s-setup.md  k0s.yaml.example  network-plan.md  node-onboarding.md  raspberry-pi-worker.md
presentations/: demo-runbook.md  k8s-homelab.html
scripts/: at.py  config.ini  create-dos-dummy-rom.py  create-dos-dummy-rom.sh  ddns.py  example.py  k0s-pbs-backup.sh  k0s-reconverge-check.sh  lsio.py  motd.sh  pbs-update-backup-names.sh  proxmox-host-backup.sh  reinstall-ceph.sh  verify_ghcr_hwinther_attestations.py  wip.py
scripts/cloud-init/: README.md  ci-ssh-keys  cloud-init-debian-docker.yaml  cloud-init-debian-user.yaml  create-debian-cloud-init-test.sh  debian.sh  destroy-debian-cloud-init-test.sh  proxmox-9.0-default-cloud-init-values.txt  ubuntu.sh
scripts/tests/: test_lsio.py
src/common/: common.py
src/lxc/: actions.py  models.py
temp/: waf-remaining-work.md
templates/awall/: gateway-nat-policy.json
templates/bind9/: named.conf.authoritative  named.conf.recursive  named.zones.forward.conf  named.zones.master.conf  named.zones.slave.conf  zone.template
templates/isc-dhcp-server/: dhcpd.conf  dhcpd.devices.conf  dhcpd.subnets.conf
templates/msmtp/: msmtprc
templates/muacme/: muacme.conf
templates/nginx/: INTERNAL_REVERSE_PROXY.md  internal-reverse-proxy.conf  jellyfin.conf  options-ssl-nginx.conf
templates/samba/: smb.conf
templates/sssd/: sssd.conf
templates/transmission/: settings.json
templates/x11/: XF86Config-3-FBDev  XF86Config-3-RedHat52-Cirrus
vm-images/: README.md  sparc-Qemu9G.qcow2.template  sparc-Qemu9G.raw.template.xz  sparc-SUN2.9G.qcow2.template  sparc-SUN2.9G.raw.template.xz
(+698 files in other folders)
