[project]
name = "proxmox"
version = "0.1.0"
description = "proxmox scripts"
authors = [
    { name = "Hans Christian Winther-Sørensen", email = "proxmox@wsh.no" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

keywords = ["proxmox", "automation", "virtualization", "linux", "administration"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: System Administrators",
]

dependencies = [
    "dnspython==2.8.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff==0.8.0",
    "mypy==1.13.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "build==1.5.0"
]

[project.urls]
homepage = "https://github.com/hwinther/proxmox"
documentation = "https://github.com/hwinther/proxmox"
repository = "https://github.com/hwinther/proxmox"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
exclude = ["proxmox.tests*"]
namespaces = true

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "bases",
    "clusters",
    "compose",
    "edge-sdr",
    "infra",
    "templates",
    "tools",
]

[tool.ruff.lint]
# Start with flake8-equivalent rule families only (pycodestyle + pyflakes).
# Tighten by adding "B" (bugbear), "I" (isort), "UP" (pyupgrade), "SIM"
# (simplify), "N" (pep8-naming) once the existing warnings are cleared.
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
# The expected string asserts on `'  path = \n'` from SambaShare with an
# empty path — the trailing space is intentional and matches what the
# production code emits.
"src/lxc/distro/alpine/services/tests/test_samba.py" = ["W291"]

[tool.ruff.format]
# Match the previous black config: single quotes preserved as-is.
quote-style = "preserve"

[tool.mypy]
python_version = "3.10"
# This codebase is ~60% typed; tighten these over time as annotations land.
ignore_missing_imports = true
allow_untyped_defs = true
allow_untyped_calls = true
implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
# Service subclasses intentionally have heterogeneous install/uninstall/start/stop
# signatures (each takes its own domain-specific args). The base Service class
# defines them as **kwargs placeholders so the structure is documented, but LSP
# is deliberately not preserved across the install-method hierarchy.
disable_error_code = ["override"]
# tests/ doesn't exist at repo root; the python-build composite runs `mypy src`
# when only src/ is present, so this section governs that invocation.

[tool.pytest.ini_options]
# Tests live under src/ (e.g. src/lxc/distro/alpine/services/tests/) and
# scripts/tests/. Both directories need to be on sys.path so the test files
# can do `from lxc.actions import ...` etc.
pythonpath = ["src", "scripts"]
testpaths = ["src", "scripts"]
